@@ -5,7 +5,8 @@ enum MessageType
   MSGTYPE_UNKNOWN 								= 0,
   MSGTYPE_BALANCE_UPDATED					= 1,
   MSGTYPE_PORTFOLIO_STARTED 			= 2,
-  MSGTYPE_TRADER_WEIGHT_UPDATED 	= 3,
+  MSGTYPE_TRADER_WEIGHT_UPDATED   = 3,
+  MSGTYPE_TRADER_UTILITY_UPDATED 	= 4,
 };
 
 enum MarketType
