@@ -8,6 +8,7 @@ Class.MSGTYPE_UNKNOWN 				  			= 0
 Class.MSGTYPE_BALANCE_UPDATED 				= 1
 Class.MSGTYPE_PORTFOLIO_STARTED 			= 2
 Class.MSGTYPE_TRADER_WEIGHT_UPDATED 	= 3
+Class.MSGTYPE_TRADER_UTILITY_UPDATED 	= 4
 
 
 -- Type of market:
